# visions-slurm

./: .gitignore  .gitreview  Makefile.in  README_VISIONS.md  aclocal.m4  configure  configure.ac  slurmviz-deployer  slurmviz-maker  wscript
auxdir/: Makefile.in  x_ac_curl.m4
contribs/: Makefile.in
contribs/cray/: Makefile.in
contribs/lua/: Makefile.in
contribs/mic/: Makefile.in
contribs/openlava/: Makefile.in
contribs/pam/: Makefile.in
contribs/pam_slurm_adopt/: Makefile.in
contribs/perlapi/: Makefile.in
contribs/phpext/: Makefile.in
contribs/pmi2/: Makefile.in
contribs/seff/: Makefile.in
contribs/sgather/: Makefile.in
contribs/sgi/: Makefile.in
contribs/sjobexit/: Makefile.in
contribs/torque/: Makefile.in
doc/: Makefile.in
doc/html/: Makefile.in
doc/man/: Makefile.in
etc/: Makefile.in
slurm/: vision_defines.h
spank_plugins/: hagen_daas.c  hagen_daas_opts.c  hmaas_opts.c  wafer_res_opts.c
src/: Makefile.in
src/api/: Makefile.in
src/bcast/: Makefile.in
src/common/: Makefile.in  hagen_daas.h
src/database/: Makefile.in
src/db_api/: Makefile.in
src/layouts/: Makefile.in
src/plugins/: Makefile.in
src/plugins/job_submit/cerberus/: Makefile.am  cerberus_config.c  cerberus_config.h  cerberus_config_default.h  job_submit_cerberus.c
src/plugins/job_submit/hagen_daas/: Makefile.am  Makefile.in  hagen_daas.c  hagen_daas_config.c  hagen_daas_config.h  hagen_daas_config_default.h  job_submit_hagen_daas.c
src/plugins/job_submit/hardware_multiplexing_as_a_service/: Makefile.am  hardware_multiplexing_as_a_service.c
src/plugins/job_submit/nmpm_custom_resource/: Makefile.am  Makefile.in  job_submit_nmpm_custom_resource.c
src/sacct/: Makefile.in
src/sacctmgr/: Makefile.in
src/salloc/: Makefile.in
src/sattach/: Makefile.in
src/sbatch/: Makefile.in
src/sbcast/: Makefile.in
src/scancel/: Makefile.in
src/scontrol/: Makefile.in
src/sdiag/: Makefile.in
src/sinfo/: Makefile.in
src/slurmctld/: Makefile.in  job_mgr.c  job_submit.c  proc_req.c
src/slurmd/: Makefile.in
src/slurmdbd/: Makefile.in
src/smap/: Makefile.in
src/smd/: Makefile.in
src/sprio/: Makefile.in
src/squeue/: Makefile.in
src/sreport/: Makefile.in
src/srun/: Makefile.in
src/srun_cr/: Makefile.in
src/sshare/: Makefile.in
src/sstat/: Makefile.in
src/strigger/: Makefile.in
testsuite/: Makefile.in
visionary-utils/: clusterize  singularity-commands.sh  slurmviz-commons.sh  slurmviz-deployer
(+178 files in other folders)
